Added functions to JS Code

--- a/Basic_html_1.html
+++ b/Basic_html_1.html
@@ -9,6 +9,9 @@
 
     <p id="test"></p>
 
+    <button onclick="document.getElementById('time').innerHTML=Date()">The time is?</button>
+
+    <p id="time"></p>
     <script>
         var x = 5;
         var y = 6;
