--- a/Basic_HTML_2.html
+++ b/Basic_HTML_2.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="Basic_JavaScript_2.js" async></script>
+    <script src="./JavaScript/Basic_JavaScript_2.js" async></script>
 </head>
 <body>
     <button onclick="displayDate()">Test</button>
