Fixed error with equal button not working

--- a/Calculator/Calculator.HTML
+++ b/Calculator/Calculator.HTML
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator App</title>
-    <script src="./js/Calculator.js" async></script>
+    <script src="./js/Calculator.js" defer></script>
     <link rel="stylesheet" href="./css/Calculator.css">
 </head>
 <body>
@@ -32,7 +32,7 @@
 
             <button type="button" class="decimal function" value=".">.</button>
             <button type="button" class="all-clear function" value="all-clear">AC</button>
-            <button type="button" class="equal-sign" class="equal-sign operator" value="=">=</button>
+            <button type="button" class="equal-sign operator" value="=">=</button>
 
 
         </div>
