--- a/Basic_html_1.html
+++ b/Basic_html_1.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Learning how to assign Variables</p>
+    <p style="font-size:2vw;">Learning how to assign Variables</p>
 
     <p id="test"></p>
 
