Created an image with the zoom in and out feture

--- a/JavaScript Projects/HTML_3.html
+++ b/JavaScript Projects/HTML_3.html
@@ -19,8 +19,25 @@
     </ul>
 
 
+    <img src="../Images/Car1.jpg" alt="Car">
 
+    <style>
+    @keyframes zoominoutsinglefeatured {
+        0% {
+            transform: scale(1,1);
+        }
+        50% {
+            transform: scale(1.2,1.2);
+        }
+        100% {
+            transform: scale(1,1);
+        }
+    }
 
+    img {
+	    animation: zoominoutsinglefeatured 15s forwards;
+    }
+    </style>
 
 
 </body>
